# healthcare

./: pyproject.toml
docs/source/: conf.py  doctor.rst  healthcare_view.rst
healthcare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
healthcareenv/: pyvenv.cfg
src/healthcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/model/: patient.py
src/service/: assignment_service.py
src/view/: healthcare_view.py
